adding support for Aptfile

--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -45,6 +45,9 @@ WORKDIR /app
 # on build, copy application files
 ONBUILD COPY . /app
 
+# on build, for backward compatibility, look for /app/Aptfile and if it exists, install the packages contained
+ONBUILD RUN if [ -f "/app/Aptfile" ]; then apt-get update -q && cat Aptfile | xargs apt-get -qy install && rm -rf /var/lib/apt/lists/*; fi;
+
 # on build, for backward compatibility, look for /app/init.R and if it exists, execute it
 ONBUILD RUN if [ -f "/app/init.R" ]; then /usr/bin/R --no-init-file --no-save --quiet --slave -f /app/init.R; fi;
 
