--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -35,11 +35,11 @@ RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9 \
     r-base-dev=$APT_VERSION \
     r-recommended=$APT_VERSION \
   && echo 'options(repos = c(CRAN = "https://cloud.r-project.org/"), download.file.method = "libcurl")' >> /etc/R/Rprofile.site \
+  && mkdir -p /app/R/site-library \
   && echo '.libPaths(c("/app/R/site-library", .libPaths()))' >> /etc/R/Rprofile.site \
   && rm -rf /var/lib/apt/lists/*
 
-# setup app directory
-RUN mkdir -p /app /app/R/site-library
+# set /app as working directory
 WORKDIR /app
 
 # on build, copy application files
