--- a/Dockerfile.shiny
+++ b/Dockerfile.shiny
@@ -24,6 +24,9 @@ RUN echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen \
 ENV LC_ALL en_US.UTF-8
 ENV LANG en_US.UTF-8
 
+# copy over helpers script
+COPY helpers.R /etc/R/helpers.R
+
 # install R & set default CRAN repo
 RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9 \
   && echo 'deb https://cloud.r-project.org/bin/linux/ubuntu xenial/' > /etc/apt/sources.list.d/cran.list \
@@ -32,11 +35,12 @@ RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9 \
     libgsl0-dev \
     r-base-dev=$APT_VERSION \
     r-recommended=$APT_VERSION \
+  && rm -rf /var/lib/apt/lists/* \
   && echo 'options(repos = c(CRAN = "https://cloud.r-project.org/"), download.file.method = "libcurl")' >> /etc/R/Rprofile.site \
-  && mkdir -p /app/R/site-library \
   && echo '.libPaths(c("/app/R/site-library", .libPaths()))' >> /etc/R/Rprofile.site \
-  && /usr/bin/R --no-init-file --no-save --quiet --slave -e "install.packages('shiny')" \
-  && rm -rf /var/lib/apt/lists/*
+  && echo 'source("/etc/R/helpers.R")' >> /etc/R/Rprofile.site \
+  && mkdir -p /app/R/site-library \
+  && /usr/bin/R --no-save --quiet --slave -e "install.packages('shiny')"
 
 # set /app as working directory
 WORKDIR /app
