--- a/Dockerfile.shiny
+++ b/Dockerfile.shiny
@@ -1,49 +1,7 @@
-FROM heroku/heroku:16-build
+FROM virtualstaticvoid/heroku-docker-r
 
-ARG R_VERSION
-ARG APT_VERSION
-ARG GIT_SHA
-ARG GIT_DATE
-ARG BUILD_DATE
-ARG MAINTAINER
-ARG MAINTAINER_URL
-
-LABEL "r.version"="$R_VERSION" \
-      "r.version.apt"="$APT_VERSION" \
-      "git.sha"="$GIT_SHA" \
-      "git.date"="$GIT_DATE" \
-      "build.date"="$BUILD_DATE" \
-      "maintainer"="$MAINTAINER" \
-      "maintainer.url"="$MAINTAINER_URL"
-
-## Configure default locale
-RUN echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen \
-  && locale-gen en_US.utf8 \
-  && /usr/sbin/update-locale LANG=en_US.UTF-8
-
-ENV LC_ALL en_US.UTF-8
-ENV LANG en_US.UTF-8
-
-# copy over helpers script
-COPY helpers.R /etc/R/helpers.R
-
-# install R & set default CRAN repo
-RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9 \
-  && echo 'deb https://cloud.r-project.org/bin/linux/ubuntu xenial/' > /etc/apt/sources.list.d/cran.list \
-  && apt-get update -q \
-  && apt-get install -qy --no-install-recommends \
-    libgsl0-dev \
-    r-base-dev=$APT_VERSION \
-    r-recommended=$APT_VERSION \
-  && rm -rf /var/lib/apt/lists/* \
-  && echo 'options(repos = c(CRAN = "https://cloud.r-project.org/"), download.file.method = "libcurl")' >> /etc/R/Rprofile.site \
-  && echo '.libPaths(c("/app/R/site-library", .libPaths()))' >> /etc/R/Rprofile.site \
-  && echo 'source("/etc/R/helpers.R")' >> /etc/R/Rprofile.site \
-  && mkdir -p /app/R/site-library \
-  && /usr/bin/R --no-save --quiet --slave -e "install.packages('shiny')"
-
-# set /app as working directory
-WORKDIR /app
+# install shiny
+RUN /usr/bin/R --no-save --quiet --slave -e "install.packages('shiny')"
 
 # on build, copy application files
 ONBUILD COPY . /app
@@ -54,9 +12,9 @@ ONBUILD RUN if [ -f "/app/onbuild" ]; then bash /app/onbuild; fi;
 # on build, for backward compatibility, look for /app/Aptfile and if it exists, install the packages contained
 ONBUILD RUN if [ -f "/app/Aptfile" ]; then apt-get update -q && cat Aptfile | xargs apt-get -qy install && rm -rf /var/lib/apt/lists/*; fi;
 
+# on build, for backward compatibility, look for /app/init.R and if it exists, execute it
+ONBUILD RUN if [ -f "/app/init.R" ]; then /usr/bin/R --no-init-file --no-save --quiet --slave -f /app/init.R; fi;
+
 # on build, packrat restore packages
 # NOTE: packrat itself is packaged in this same structure so will be bootstrapped here
 ONBUILD RUN if [ -f "/app/packrat/init.R" ]; then /usr/bin/R --no-init-file --no-save --quiet --slave -f /app/packrat/init.R --args --bootstrap-packrat; fi;
-
-# run R console
-CMD ["/usr/bin/R"]
