--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ services:
 script:
   - make build
   - make test
-  - [ "$TRAVIS_PULL_REQUEST" = "false" ] && echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - [ "$TRAVIS_PULL_REQUEST" = "false" ] && make push
+  - '[ "$TRAVIS_PULL_REQUEST" = "false" ] && echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin'
+  - '[ "$TRAVIS_PULL_REQUEST" = "false" ] && make push'
