--- a/Dockerfile.shiny
+++ b/Dockerfile.shiny
@@ -1,4 +1,6 @@
-FROM virtualstaticvoid/heroku-docker-r
+ARG BASE_IMAGE
+
+FROM $BASE_IMAGE
 
 # install shiny
 RUN /usr/bin/R --no-save --quiet --slave -e "install.packages('shiny')"
