prevent false positives

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ services:
 script:
   - make build
   - make test
-  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && make push; else exit 0; fi'
+  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && make push; fi'
