--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ services:
   - docker
 
 script:
-  - make build
-  - make test
+  - make --no-builtin-rules build
+  - make --no-builtin-rules test
   - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && make push; fi'
