--- a/Dockerfile.shiny
+++ b/Dockerfile.shiny
@@ -3,7 +3,7 @@ ARG BASE_IMAGE
 FROM $BASE_IMAGE
 
 # install shiny
-RUN /usr/bin/R --no-save --quiet --slave -e "install.packages('shiny')"
+RUN /usr/bin/R --no-save --quiet --slave -e "install.packages('shiny')" > /dev/null
 
 # on build, copy application files
 ONBUILD COPY . /app
