--- a/test/shiny/Makefile
+++ b/test/shiny/Makefile
@@ -1,13 +1,15 @@
 # default build target
 all::
 
-all:: test
-.PHONY: all test
+include ../../Makevars
 
 PROJ:=$(shell basename $(CURDIR))
 TEST_IMAGE:=$(IMAGE_TAG)-test-$(PROJ)
 
 export
+
+all:: test
+.PHONY: all test
 
 test:
 
