--- a/test/plumber/Dockerfile
+++ b/test/plumber/Dockerfile
@@ -10,4 +10,4 @@ FROM ${BASE_IMAGE}-plumber
 ENV PORT=8080
 
 # override the base image CMD to run Plumber
-CMD ["/usr/bin/R", "--no-save", "--gui-none", "-f /app/app.R"]
+CMD ["/usr/bin/R", "--no-save", "--gui-none", "-f", "/app/app.R"]
