needs DEBIAN_FRONTEND=noninteractive
and clean up apt deb files to reduce image size

--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -9,7 +9,7 @@ ONBUILD COPY . /app
 ONBUILD RUN if [ -f "/app/onbuild" ]; then bash /app/onbuild; fi;
 
 # on build, for backward compatibility, look for /app/Aptfile and if it exists, install the packages contained
-ONBUILD RUN if [ -f "/app/Aptfile" ]; then apt-get update -q && cat Aptfile | xargs apt-get -qy install && rm -rf /var/lib/apt/lists/*; fi;
+ONBUILD RUN if [ -f "/app/Aptfile" ]; then export DEBIAN_FRONTEND=noninteractive && apt-get update -q && cat Aptfile | xargs apt-get -qy install && apt-get clean && rm -rf /var/lib/apt/lists/*; fi;
 
 # on build, for backward compatibility, look for /app/init.R and if it exists, execute it
 ONBUILD RUN if [ -f "/app/init.R" ]; then /usr/bin/R --no-init-file --no-save --quiet --slave -f /app/init.R; fi;
