--- a/Dockerfile.plumber
+++ b/Dockerfile.plumber
@@ -2,6 +2,14 @@ ARG BASE_IMAGE
 
 FROM $BASE_IMAGE
 
+# plumber dependencies
+RUN export DEBIAN_FRONTEND=noninteractive \
+ && apt-get update -q \
+ && apt-get install -qy --no-install-recommends \
+      libsodium-dev \
+ && apt-get clean \
+ && rm -rf /var/lib/apt/lists/*
+
 # install plumber
 RUN /usr/bin/R --no-save --slave -e "install.packages('plumber', clean=TRUE, verbose=FALSE)"
 
