--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,14 @@ services:
   - docker
 
 script:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - make --no-builtin-rules build
   - make --no-builtin-rules test
 
 deploy:
   provider: script
   script:
-    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && make push
+    - make push
     - curl -X POST "https://hooks.microbadger.com/images/virtualstaticvoid/heroku-docker-r/$MICROBADGE_TOKEN"
   on:
     branch: master
