--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
 deploy:
   provider: script
   script:
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
     - make push
     - curl -X POST "https://hooks.microbadger.com/images/virtualstaticvoid/heroku-docker-r/$MICROBADGE_TOKEN"
   on:
