--- a/Dockerfile.plumber
+++ b/Dockerfile.plumber
@@ -11,7 +11,7 @@ RUN export DEBIAN_FRONTEND=noninteractive \
  && rm -rf /var/lib/apt/lists/*
 
 # install plumber
-RUN /usr/bin/R --no-save --slave -e "install.packages('plumber', clean=TRUE, verbose=FALSE)"
+RUN /usr/bin/R --no-save --slave -e "install.packages('plumber', clean=TRUE, quiet=TRUE)"
 
 # on build, copy application files
 ONBUILD COPY . /app
