use docker compose and disable pseudo-TTY when running exec in tests

--- a/test/shiny/Makefile
+++ b/test/shiny/Makefile
@@ -18,8 +18,8 @@ test:
 		--tag $(TEST_IMAGE) \
 		--file Dockerfile .
 
-	docker-compose up --detach
+	docker compose up --detach
 
-	docker-compose exec shiny /bin/bash /app/test
+	docker compose exec -T $(PROJ) /bin/bash /app/test
 
-	docker-compose down
+	docker compose down
