--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -9,6 +9,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ghcr.io/${{ github.repository }}
+  LATEST_VERSION: 4.4.2
 
 jobs:
   build:
@@ -42,3 +43,7 @@ jobs:
       - name: Publish images
         if: github.event_name != 'pull_request'
         run: make --no-builtin-rules push R_VERSION=${{ matrix.r_version }}
+
+      - name: Publish latest images
+        if: github.event_name != 'pull_request' && '${{ matrix.r_version }}' == '${{ env.LATEST_VERSION }}'
+        run: make --no-builtin-rules push-latest R_VERSION=${{ matrix.r_version }}
